TG-48: added max width to copy segment

--- a/src/views/dashboard/Dashboard.scss
+++ b/src/views/dashboard/Dashboard.scss
@@ -17,6 +17,10 @@
 			}
 		}
 
+		&-copy {
+			max-width: $story-preview-width-medium;
+		}
+
 		@media (max-width: $breakpoint-m) {
 			flex-direction: column;
 		}
