--- a/src/views/dashboard/widgets/RecentWork.scss
+++ b/src/views/dashboard/widgets/RecentWork.scss
@@ -39,6 +39,10 @@
 			display: flex;
 			justify-content: space-between;
 			align-items: center;
+
+			@media (max-width: $breakpoint-sm) {
+				margin-right: 90px;
+			}
 		}
 	}
 }
