--- a/src/views/stories/widgets/page-picker/StoryPagePicker.scss
+++ b/src/views/stories/widgets/page-picker/StoryPagePicker.scss
@@ -2,7 +2,8 @@
 @import 'styles/themes/mixins.scss';
 
 .st-StoryPagePicker {
-	min-width: 220px;
+	max-width: 220px;
+	width: 100%;
 	height: 40px;
 
 	&__option {
@@ -49,6 +50,7 @@
 
 	&__menu {
 		@include theme-aware('background-color', 'B100');
+		min-width: 216px;
 
 		&-list {
 			overflow-x: hidden;
