--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -90,3 +90,6 @@ $market-image-width-large: 120px;
 $market-image-width-small: 80px;
 $market-image-height-large: 120px;
 $market-image-height-small: 80px;
+
+// GLOBAL
+$app-max-width: 1366px;
