--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -8,7 +8,7 @@ body {
 
 #root {
 	min-height: 100vh;
-	max-width: 1366px;
+	max-width: $app-max-width;
 	width: 100%;
 	padding: 0 20px;
 	margin: 0 auto;
