--- a/src/components/widgets/text-editor/TextEditor.scss
+++ b/src/components/widgets/text-editor/TextEditor.scss
@@ -60,9 +60,9 @@
 
 		&-formats {
 			.st-IconButton {
-				margin-right: 6px;
 				min-width: 40px;
 				border: none;
+				box-shadow: none;
 			}
 		}
 	}
