--- a/src/views/dashboard/widgets/RecentViews.scss
+++ b/src/views/dashboard/widgets/RecentViews.scss
@@ -5,4 +5,10 @@
 	display: flex;
 	flex-direction: column;
 	margin-top: 8px;
+
+	&-link {
+		width: 100%;
+		display: flex;
+		justify-content: center;
+	}
 }
