--- a/src/components/nav/MobileDrawer.scss
+++ b/src/components/nav/MobileDrawer.scss
@@ -23,6 +23,12 @@
 			}
 		}
 
+		&-theme {
+			position: absolute;
+			top: 20px;
+			right: 12px;
+		}
+
 		.placeholder-18-black {
 			margin-bottom: 6px;
 		}
