TG-58: added image cropper

--- a/src/views/user/UserSettings.scss
+++ b/src/views/user/UserSettings.scss
@@ -25,7 +25,8 @@
 
 				.st-Image {
 					&-container,
-					&-fallback {
+					&-fallback,
+					&-full {
 						border-radius: 50%;
 						height: 200px;
 						width: 200px;
