--- a/src/views/stories/writter/StoryWritter.scss
+++ b/src/views/stories/writter/StoryWritter.scss
@@ -15,6 +15,9 @@
 		&-saving {
 			min-height: 24px;
 			margin: 8px 0;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
 		}
 
 		.st-FloatingInput {
